fixed nav bar shifting

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,9 +47,9 @@ body::-webkit-scrollbar {
     border-radius: 4px;
 }
 
-body::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
+// body::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,1);
+// }
 
 body::-webkit-scrollbar-thumb {
   background-color: rgba($color-primary, 0.5);
