--- a/app/assets/stylesheets/session/navigation_bar.scss
+++ b/app/assets/stylesheets/session/navigation_bar.scss
@@ -4,10 +4,10 @@
   position: fixed;
   display:flex;
   flex-direction: row;
-  top: 5px;
   height: 65px;
-  width: 100%;
+  width: 100vw;
   margin: -8px;
+  top: 5px;
   background-color: $color-primary;
   z-index: 10;
   // padding-left:5px;
